assets/css/rtl-pdf.css
div
{ 
    direction: rtl !important;
} 
body
{ 
    direction: rtl !important; 
    unicode-bidi: embed;
}
.document_id
{ 
    margin-right: 5px;   
}

.doc_title
{ 
    direction: rtl;
    unicode-bidi: embed;
    display: block;
    width: 100%;
}

.signed_on 
{ 
    margin-right: 5px;    
}

.signatures
{ 
    position: absolute; 
}

.signature-left
{
    margin-right: 5px;
    margin-left: 450px;
}
.footer-left
{ 
    float: right; 
    text-align: right;
}
.footer-right
{ 
    float: left; 
    text-align: left;
}

#audit-trail-wrapper .document-info .left
{ 
    float: right; 
    text-align: right;  
}
#audit-trail-wrapper .main .signer-view .info .left
{
    float:right !important ; 
}
#audit-trail-wrapper .main .user
{
    padding: -15px 2px;
}
#audit-trail-wrapper .main .signer-view .checksum .checksum-caption
{
    float: right !important;
}

.audit-pdf-bottom-footer .audit-pdf-site-url
{
    text-align: left;
    padding: 0;
}

